Fix header spacing on small screens

--- a/src/o.scss
+++ b/src/o.scss
@@ -261,6 +261,7 @@ a {
 		.mobile-page-header {
 			display: block;
 			margin-bottom: 30px;
+			margin-top: 15px;
 			
 			> div:not(:first-child),
 			> div > div:first-child {
